--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         h1 {
             text-align: center;
-            margin: 1.5em 0;
+            margin: 3rem 0;
         }
 
         canvas {
@@ -36,8 +36,14 @@
 
         button {
             font-family: 'Inconsolata', monospace;
+            font-size: 1em;
+            padding: 1em 1.5em;
             color: white;
             cursor: pointer;
+        }
+
+        .instructions {
+            margin: 0 0 3rem;
         }
 
         .content {
@@ -47,8 +53,6 @@
         #play-pause {
             background-color: var(--green);
             padding: 1em 1.5em;
-            font-weight: bold;
-            font-size: 1.1em;
             margin-right: 1em;
             border: none;
         }
@@ -61,13 +65,16 @@
 
         .container {
             display: flex;
-            margin: 2em 0 0.5em;
+            margin-bottom: 0.5em;
             align-items: center;
             font-size: 1.2em;
         }
 
-        #trigger i {
+        i {
             color: var(--green);
+        }
+
+        #trigger i {
             font-size: .75em;
             margin-left: .75em;
         }
@@ -107,7 +114,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.25em;
+            font-size: 1.2em;
+        }
+
+        .key-summary {
+            margin: 2.5em 0 2em;
         }
 
         td {
@@ -117,7 +128,6 @@
 
         .arrow {
             margin: 0 1.5em;
-            color: var(--green);
         }
     </style>
 </head>
@@ -126,7 +136,8 @@
     
     <main>
         <div class="content">
-            <p style="margin-top: 0;">The default ROM is BRIX. Press Q/E to move the paddle. Press Start to play! Some ROMs may not work.</p>
+            <p class="instructions">The default ROM is BRIX. Press Q/E to move the paddle. Click Start or press ENTER to play/pause. Some ROMs may not work.</p>
+
             <div class="container">
                 <button id="play-pause">Start</button>
                 <span>ROM:</span>
@@ -135,7 +146,6 @@
                         <span id="rom">BRIX</span>
                         <i class="fas fa-chevron-down"></i>
                     </div>
-        
                     <div id="menu"></div>
                 </div>
             </div>
@@ -144,7 +154,8 @@
                 <canvas id="canvas" width="64" height="32"></canvas>    
             </div>
 
-            <p style="margin: 2em 0;">The CHIP-8 16-key hexadecimal keypad is mapped as follows:</p>
+            <p class="key-summary">The CHIP-8 16-key hexadecimal keypad is mapped as follows:</p>
+
             <div class="keys">
                 <table>
                     <tr>
